added a test api
