# generators/app/templates/src/api/swagger/swagger.yaml
@@ -17,32 +17,8 @@ consumes:
 # format of the responses to the client (Accepts)
 produces:
   - application/json
-paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
 
+paths:
   /person/{id}:
     x-swagger-router-controller: person
     get:
@@ -251,12 +227,6 @@ definitions:
       type: string
       description: A string containing a JSON Pointer value.
 
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
   ErrorResponse:
     required:
       - message
